# pong_cpp_sdl2

./: .gitignore  CMakeLists.txt  game.cpp  game.h  main.cpp
game_logic/: ball.cpp  ball.h  collision.cpp  collision.h  paddle.cpp  paddle.h  score.cpp  score.h
game_states/: menu.cpp  menu.h  pvc.cpp  pvc.h  pvp.cpp  pvp.h  scenes.h
